Initial release of Walbottle 0.1.0
==================================

Major changes:
 • Initial version of the project