@@ -28,7 +28,7 @@
  *
  * Walbottle provides compile-time version information.
  *
- * Since: UNRELEASED
+ * Since: 0.1.0
  */
 
 /**
@@ -37,7 +37,7 @@
  * Evaluates to the major version of the libwalbottle headers at compile time.
  * (e.g. in libwalbottle version 1.2.3 this is 1).
  *
- * Since: UNRELEASED
+ * Since: 0.1.0
  */
 #define WBL_MAJOR_VERSION (@WBL_VERSION_MAJOR@)
 
@@ -47,7 +47,7 @@
  * Evaluates to the minor version of the libwalbottle headers at compile time.
  * (e.g. in libwalbottle version 1.2.3 this is 2).
  *
- * Since: UNRELEASED
+ * Since: 0.1.0
  */
 #define WBL_MINOR_VERSION (@WBL_VERSION_MINOR@)
 
@@ -57,7 +57,7 @@
  * Evaluates to the micro version of the libwalbottle headers at compile time.
  * (e.g. in libwalbottle version 1.2.3 this is 3).
  *
- * Since: UNRELEASED
+ * Since: 0.1.0
  */
 #define WBL_MICRO_VERSION (@WBL_VERSION_MICRO@)
 
@@ -70,7 +70,7 @@
  * Evaluates to %TRUE if the version of the libwalbottle header files
  * is the same as or newer than the passed-in version.
  *
- * Since: UNRELEASED
+ * Since: 0.1.0
  */
 #define WBL_CHECK_VERSION(major,minor,micro) \
     (WBL_MAJOR_VERSION > (major) || \
